--- a/my-new-app/package.json
+++ b/my-new-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-new-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://lsimonen1.github.io/my-new-app",
+  "homepage": "http://lsimonen1.github.io/my-new-app/public",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
